Closed
Bug 1311587
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::gfx::VRControllerManagerOpenVR::HandleInput
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: jchen, Assigned: daoshengmu)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-bdb2293b-b14f-487e-a876-4eaf32161019.
=============================================================
Low volume crash that started with the 10-18 nightly. It's the #32 crash for that nightly on Windows with 6 crashes.
Daosheng, do you think this is a regression from bug 1299928?
Flags: needinfo?(dmu)
![]() |
Assignee | |
Updated•9 years ago
|
Assignee: nobody → dmu
Flags: needinfo?(dmu)
![]() |
Assignee | |
Comment 1•9 years ago
|
||
(In reply to Jim Chen [:jchen] [:darchons] from comment #0)
> This bug was filed from the Socorro interface and is
> report bp-bdb2293b-b14f-487e-a876-4eaf32161019.
> =============================================================
>
> Low volume crash that started with the 10-18 nightly. It's the #32 crash for
> that nightly on Windows with 6 crashes.
>
> Daosheng, do you think this is a regression from bug 1299928?
Thanks for notice. It is indeed a regression bug from bug 1299928. I am going to give a quick fix on this.
Comment hidden (mozreview-request) |
![]() |
Assignee | |
Comment 3•9 years ago
|
||
For some cases, we have added event listeners to VRManagerParent, but it does not be ready to register VRManager. When VRManager is notified to Vsync, the VRSystem at VRControllerManagerOpenVR would be a nullptr because it is not be initialized yet.
Comment 4•9 years ago
|
||
mozreview-review |
Comment on attachment 8802794 [details]
Bug 1311587 - Make sure OpenVR is installed before handling user inputs;
https://reviewboard.mozilla.org/r/87088/#review86258
Good catch, thanks for the quick fix!
Attachment #8802794 -
Flags: review?(kgilbert) → review+
![]() |
Assignee | |
Updated•9 years ago
|
Keywords: checkin-needed
Comment hidden (mozreview-request) |
![]() |
Assignee | |
Comment 7•9 years ago
|
||
(In reply to Daosheng Mu[:daoshengmu] from comment #6)
> Comment on attachment 8802794 [details]
> Bug 1311587 - Make sure OpenVR is installed before handling user inputs;
>
> Review request updated; see interdiff:
> https://reviewboard.mozilla.org/r/87088/diff/1-2/
Rebase m-c and check-in again
![]() |
Assignee | |
Updated•9 years ago
|
Keywords: checkin-needed
Comment 8•9 years ago
|
||
mozreview-review |
Comment on attachment 8802794 [details]
Bug 1311587 - Make sure OpenVR is installed before handling user inputs;
https://reviewboard.mozilla.org/r/87088/#review86620
Pushed by kgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6c7640c66a3a
Make sure OpenVR is installed before handling user inputs; r=kip
Keywords: checkin-needed
Comment 10•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•