Bug 1311587 - Make sure OpenVR is installed before handling user inputs; r=kip

--HG--
extra : rebase_source : 8232206feaeedf278279edbdc2af4cd2291b5fb6